# optulus_tool

./: .gitignore  Cargo.toml  README.md
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/optulus_sdk/: __init__.py  _optulus_native.py  _telemetry_endpoint.py  context.py  embeddings.py  exporters.py  filtering.py  pruner.py  telemetry.py  tool_registry.py  tool_types.py  types.py
bindings/python/src/: lib.rs
bindings/python/tests/: conftest.py  test_exporters.py  test_filter_tools.py  test_observability_integration.py  test_prune_tool_message_content.py  test_telemetry.py  test_tool_registry.py
crates/pruning-core/: Cargo.toml
crates/pruning-core/benches/: pruning_bench.rs
crates/pruning-core/src/: lib.rs  pipeline.rs
crates/pruning-core/src/rules/: duplicate_collapse.rs  html_strip.rs  json_delta.rs  mod.rs  token_budget.rs
crates/pruning-core/tests/: fixtures_reduction.rs  perf_gate.rs
docs/: DEVELOPER_GUIDE.md  QUICKSTART.md
tests/fixtures/: sample_tool_output.html  sample_tool_output.json
tests/python/: test_pruner.py
