[package]
name = "pruning-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
thiserror.workspace = true
scraper = "0.21"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "pruning_bench"
harness = false
